# duna

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  README.md  cov.sh
duna-cli/: Cargo.toml
duna-cli/src/: main.rs
duna-core/: Cargo.toml  cov.sh
duna-core/src/: arch.rs  config.rs  instruction.rs  lib.rs  main.rs
duna-core/src/architectures/: mod.rs
duna-core/src/architectures/mips/: arch.rs  exception.rs  instruction.rs  mod.rs  parser.rs  program.rs  registers.rs
duna-core/src/architectures/mips/isa/: mod.rs  r_type.rs
duna-core/src/architectures/riscv/: arch.rs  instruction.rs  mod.rs  parser.rs  program.rs  registers.rs
duna-core/src/architectures/riscv/isa/: i_type.rs  m.rs  mod.rs  pseudo.rs  r_type.rs
duna-core/src/architectures/riscv/isa/i/: i_type.rs  mod.rs  pseudo.rs  r_type.rs
duna-core/src/architectures/riscv/isa/m/: mod.rs
duna-core/src/architectures/riscv/isa/zicsr/: mod.rs
duna-core/src/assembler/: assembler_impl.rs  datatypes.rs  error.rs  lexer.rs  linker.rs  mod.rs  parser.rs  partial_inst.rs
duna-core/src/assembler/parser/: directive_parser.rs  inst_parser.rs  line_parser.rs  mod.rs
duna-core/src/data_structures/: bitmap.rs  bitstr32.rs  data_enum.rs  data_value.rs  mod.rs
duna-core/src/program_state/: bitmap.rs  memory.rs  mod.rs  os.rs  phys.rs  priv_s.rs  program.rs  registers.rs  user.rs
duna-core/src/program_state/datatypes/: bitstr32.rs  data_enum.rs  data_value.rs
duna-core/tests/: rv32.rs  rv64.rs
duna-core/tests/rv32_asm/: aligned_directive_labels_1.s  bad_unaligned_word.s  dot_label.s  jump_to_la.s  simple.s
duna-macro/: Cargo.toml
duna-web/: Cargo.toml
duna_frontend/: Cargo.toml  README.md
duna_frontend/src/: lib.rs
duna_frontend/www/: env.d.ts  index.html  index.js  index.ts  package.json  tsconfig.json  webpack.config.js
duna_macro/: Cargo.toml
fuzz/: Cargo.toml
src/: arch.rs  config.rs  instruction.rs  isa.rs  lexer.rs  lib.rs  main.rs  parser.rs  program_state.rs  pseudo_inst.rs
tests/: rv32.rs  rv64.rs  (+1 more)
(+73 files in other folders)
