[package]
name = "duna-cli"
version = "0.0.1"
authors = ["noloerino <jhshi07@gmail.com>"]
edition = "2021"
default-run = "duna-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "duna-cli"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
duna-core = { path = "../duna-core" }
