[package]
name = "duna_frontend"
version = "0.1.0"
authors = ["noloerino <jhshi07@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.duna]
path = ".."