[package]
name = "duna_frontend"
version = "0.1.0"
authors = ["noloerino <jhshi07@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.68"
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.duna]
path = ".."

# Fix for https://github.com/rustwasm/wasm-pack/issues/793
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
